--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
 img {
-  width: auto\9;
-  height: auto;
   max-width: 100%;
-  vertical-align: middle;
-  border: 0;
-  -ms-interpolation-mode: bicubic;
+}
+@font-face {
+  font-family: 'PT Sans';
+  font-display: swap;
+  font-style: normal;
+  font-weight: bold;
+  src: local('PT Sans Bold'), url('./fonts/PTS75F_W.woff') format('woff');
+}
+@font-face {
+  font-family: 'PT Sans Narrow';
+  font-display: swap;
+  font-weight: bold;
+  src: local('PT Sans Narrow Bold'), url('./fonts/PTN77F_W.woff') format('woff');
 }
 .adjust-bar {
   -webkit-appearance: none;
