--- a/styles.css
+++ b/styles.css
@@ -314,7 +314,7 @@ img {
   width: 108px;
   height: 27px;
   position: relative;
-  background-image: url("./assets/logo.png");
+  background-image: url("./assets/logo.webp");
   background-repeat: no-repeat;
   background-position: left top;
   background-size: cover;
@@ -605,7 +605,7 @@ html {
   padding-right: 31px;
 }
 .weather__item_cloud-drizzle {
-  background: url("assets/cloud-drizzle.png") 100% 70%/26px no-repeat;
+  background: url("assets/cloud-drizzle.webp") 100% 70%/26px no-repeat;
 }
 .stats {
   opacity: 0;
