--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@ img {
   font-display: swap;
   font-style: normal;
   font-weight: bold;
-  src: local('PT Sans Bold'), url('./fonts/PTS75F_W.woff') format('woff');
+  src: local('PT Sans Bold'), url('./fonts/PTS75F_W.woff2') format('woff2');
 }
 @font-face {
   font-family: 'PT Sans Narrow';
   font-display: swap;
   font-weight: bold;
-  src: local('PT Sans Narrow Bold'), url('./fonts/PTN77F_W.woff') format('woff');
+  src: local('PT Sans Narrow Bold'), url('./fonts/PTN77F_W.woff2') format('woff2');
 }
 .adjust-bar {
   -webkit-appearance: none;
